<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cookbook</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_add">New Recipe</string>
    <string name="action_profile">My Profile</string>
    <string name="action_browse">Browse</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="login">Log in</string>
    <string name="add_recipe_header">Add Recipe</string>
    <string name="add_recipe_title">Title</string>
    <string name="add_recipe_introduction">Introduction</string>
    <string name="add_recipe_servings">Number of servings</string>
    <string name="add_recipe_ingredientslabel">Ingredients</string>
    <string name="add_recipe_ingredients">1. Add list of ingredients</string>
    <string name="add_recipe_stepslabel">Steps</string>
    <string name="add_recipe_steps">1. Add list of steps</string>
    <string name="add_recipe_timelabel">Time Information</string>
    <string name="add_recipe_preparationMinutes">Preparation Time (minutes)</string>
    <string name="add_recipe_cookingMinutes">Cooking Time (minutes)</string>
    <string name="add_recipe_created_date">Added:\u0020\u0020</string>
    <string name="add_recipe_addbutton">Confirm</string>
    <string name="add_recipe_toast_added">Recipe added</string>
    <string name="add_recipe_toast_required">The following field is required: </string>
    <string name="add_recipe_image_button">Add</string>
    <string name="add_recipe_add_photo">Add Photo</string>
    <string name="add_recipe_add_photo_from_gallery">Select from Gallery</string>
    <string name="add_recipe_add_photo_shoot">Take a Photo</string>
    <string name="add_recipe_cancel">Cancel</string>
    <string name="view_recipe_author">by:\u0020\u0020</string>
    <string name="view_recipe_commentlabel">Comments</string>
    <string name="view_recipe_comment_field">New Comment</string>
    <string name="view_recipe_comment_button">Add</string>
    <string name="view_recipe_comment_nonempty">You can\'t add empty comment.</string>
    <string name="view_recipe_recipe_deleted">Recipe deleted.</string>
    <string name="view_recipe_like_added">You liked this Recipe.</string>
    <string name="view_recipe_like_deleted">You unliked this Recipe.</string>
    <string name="view_recipe_action_denied">You are not authorized to do this action.</string>
    <string name="edit_recipe_header">Edit Recipe</string>
    <string name="edit_recipe_toast_edited">Recipe edited</string>
    <string name="edit_recipe_picture_deleted">Picture deleted</string>
    <string name="user_already_logged_in">You are logged in.</string>
    <string name="profile_username">Username</string>
    <string name="profile_email">e-mail:\u0020\u0020</string>
    <string name="profile_created">created:\u0020\u0020</string>
    <string name="profile_last_modified">last active:\u0020\u0020</string>
    <string name="profile_likes">Likes</string>
    <string name="profile_recipes">Recipes</string>
    <string name="browse_header">Recipes\u0020</string>
    <string name="browse_filter">select filter</string>

</resources>
