<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity" >

    <item android:id="@+id/action_login"
        android:icon="@drawable/ic_action_add_person"
        android:title="@string/login"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new_event"
        android:title="@string/action_add"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_profile"
        android:icon="@drawable/ic_action_person"
        android:title="@string/action_profile"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_browse"
        android:icon="@drawable/ic_action_view_as_list"
        android:title="@string/action_browse"
        android:showAsAction="ifRoom" />

</menu>