<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/username"
            android:text="Username"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

        <com.makeramen.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/avatar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_below="@+id/username"
            android:layout_marginLeft ="10dp"
            android:layout_marginRight ="10dp"
            android:layout_marginBottom ="15dp"
            android:src="@drawable/persondefault"
            android:scaleType="centerInside"
            app:riv_oval="true"
            />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_toRightOf="@+id/avatar"
            android:text="@string/profile_email"
            android:ellipsize="end"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_toRightOf="@+id/avatar"
            android:text="@string/profile_created"
            android:ellipsize="end"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/last_modified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/created"
            android:layout_toRightOf="@+id/avatar"
            android:text="@string/profile_last_modified"
            android:ellipsize="end"
            android:singleLine="true"/>

        <com.daimajia.swipe.SwipeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/avatar">

            <RelativeLayout
                android:id="@+id/likewrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/likeheader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/orangebasic"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/likeswitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:src="@drawable/ic_action_next_item"
                        />
                    <TextView
                        android:id="@+id/liketitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:text="@string/profile_likes"/>
                    </RelativeLayout>
                <TextView
                    android:id="@+id/likeempty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/likeheader"
                    android:text="List is empty."
                    android:layout_centerHorizontal="true"
                    android:visibility="invisible"/>

                <ListView
                    android:id="@+id/likelist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/likeheader"/>

                </RelativeLayout>

            <RelativeLayout
                android:id="@+id/recipewrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/recipeheader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/orangebasic"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/recipetitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/profile_recipes"
                        android:textColor="@color/white"
                        android:textSize="18sp"/>
                    <ImageView
                        android:id="@+id/recipeswitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_action_previous_item"
                        />
                </RelativeLayout>

                <TextView
                    android:id="@+id/recipeempty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recipeheader"
                    android:text="List is empty."
                    android:layout_centerHorizontal="true"
                    android:visibility="invisible"/>
                <ListView
                    android:id="@+id/recipelist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/recipeheader"/>

                </RelativeLayout>

            </com.daimajia.swipe.SwipeLayout>

    </RelativeLayout>
</ScrollView>